# slurm_launcher

./: MANIFEST.in  README.md  pyproject.toml  setup.py
src/slurm_launcher/: slurm.py  slurm.yaml
src/slurm_launcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
