[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm_launcher"
version = "0.0.1"
authors = [{ name = "Erik Jenner", email = "erik@ejenner.com" }]
description = "A lightweight script for launching Slurm job arrays"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = ["pyyaml"]

[project.scripts]
slurm_launcher = "slurm_launcher.slurm:main"

[project.urls]
"Homepage" = "https://github.com/ejnnr/slurm_launcher"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
